--- a/MSAToolBox/SubWindows/Legacy/CreatureNpcFlagSelector.xaml
+++ b/MSAToolBox/SubWindows/Legacy/CreatureNpcFlagSelector.xaml
@@ -2,7 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
-        Title="CreatureNpcFlagSelector" Height="234" Width="484" Background="Black">
+        Title="CreatureNpcFlagSelector" Height="234" Width="484" Background="Black"
+                      GlowBrush="{StaticResource AccentColorBrush}">
     <Grid Margin="10,10,10,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1*"/>
