--- a/MSAToolBox/SubWindows/Legacy/SpellAuraInterruptSelector.xaml
+++ b/MSAToolBox/SubWindows/Legacy/SpellAuraInterruptSelector.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
-        Title="SpellAuraInterrupt" Height="342" Width="608" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" Background="Black">
+        Title="SpellAuraInterrupt" Height="342" Width="608" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" Background="Black" GlowBrush="{StaticResource AccentColorBrush}">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="147*"/>
