--- a/MSAToolBox/SubWindows/Legacy/SpellCastInterruptSelector.xaml
+++ b/MSAToolBox/SubWindows/Legacy/SpellCastInterruptSelector.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
-        Title="SpellCastInterrupt" Height="181" Width="253" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" Background="Black">
+        Title="SpellCastInterrupt" Height="181" Width="253" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" Background="Black" GlowBrush="{StaticResource AccentColorBrush}">
     <Grid>
         <CheckBox x:Name="p" Content="Interrupt by Movement" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Click="p_Click"/>
         <CheckBox x:Name="p1" Content="Cast Push Back by Taken Hit" HorizontalAlignment="Left" Margin="10,33,0,0" VerticalAlignment="Top" Click="p_Click"/>
