--- a/MSAToolBox/SubWindows/Legacy/SpellProcSelector.xaml
+++ b/MSAToolBox/SubWindows/Legacy/SpellProcSelector.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
-        Title="SpellProc" Height="342" Width="500" ResizeMode="NoResize" WindowStartupLocation="CenterOwner">
+        Title="SpellProc" Height="342" Width="500" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" GlowBrush="{StaticResource AccentColorBrush}" Background="Black">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
