一些简单的结构调整。

--- a/MSAToolBox/Controls/LegacyMorpher.xaml
+++ b/MSAToolBox/Controls/LegacyMorpher.xaml
@@ -23,7 +23,9 @@
             <TabItem Header="Recipe">
                 <Legacy:RecipePanel x:Name="recipePanel" />
             </TabItem>
-            <Legacy:RecipePanel Height="100" Width="100"/>
+            <TabItem Header="Gossip">
+                <Legacy:GossipPanel x:Name="gossipPanel" />
+            </TabItem>
         </TabControl>
     </Grid>
 </UserControl>
