--- a/MSAToolBox/Controls/Legacy/GossipPanel.xaml
+++ b/MSAToolBox/Controls/Legacy/GossipPanel.xaml
@@ -4,25 +4,82 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
+             xmlns:Utility="clr-namespace:MSAToolBox.Utility"
              d:DesignHeight="600" d:DesignWidth="1200">
+    <UserControl.Resources>
+        <Utility:BroadCastTextConverter x:Key="BroadCastTextConverter"/>
+    </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="260*"/>
             <ColumnDefinition Width="643*"/>
             <ColumnDefinition Width="297*"/>
         </Grid.ColumnDefinitions>
-        <TextBox Height="23" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
-        <ListBox Margin="10,50,0,100"/>
-        <Grid Grid.Column="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <TextBox Margin="10,10,0,10" TextWrapping="Wrap" />
-            <TextBox Margin="10,10,0,10" TextWrapping="Wrap" Grid.Column="1"/>
-        </Grid>
-        <Label Content="Condition" HorizontalAlignment="Left" Margin="10,0,0,70" VerticalAlignment="Bottom"/>
-        <ListBox Grid.Column="2" HorizontalAlignment="Left" Height="100" Margin="187,10,0,0" VerticalAlignment="Top" Width="100"/>
+        <TextBox x:Name="gossipMenuFilter" Height="23" Margin="10,10,71,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
+        <ListBox x:Name="gossipMenuList" Margin="10,46,0,135" SelectionChanged="gossipMenuList_SelectionChanged">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock>
+                        <TextBlock.Text>
+                            <MultiBinding StringFormat="{}{0} - {1} [{2}]">
+                                <Binding Path="Menu"/>
+                                <Binding Path="NpcText"/>
+                                <Binding Path="Comment"/>
+                            </MultiBinding>
+                        </TextBlock.Text>
+                    </TextBlock>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <TabControl Grid.Column="1">
+            <TabItem Header="0">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBox x:Name="gossipTextMale0" Margin="10,10,5,45" TextWrapping="Wrap" />
+                    <TextBox x:Name="gossipTextFemale0" Margin="5,10,10,45" TextWrapping="Wrap" Grid.Column="1"/>
+                    <Label Content="Chance" HorizontalAlignment="Left" Margin="10,0,0,10" VerticalAlignment="Bottom"/>
+                    <TextBox HorizontalAlignment="Left" Height="23" Margin="67,0,0,10" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="120" x:Name="gossipTextChance0"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="1">
 
+            </TabItem>
+            <TabItem Header="2">
+
+            </TabItem>
+            <TabItem Header="3">
+
+            </TabItem>
+            <TabItem Header="4">
+
+            </TabItem>
+            <TabItem Header="5">
+
+            </TabItem>
+            <TabItem Header="6">
+
+            </TabItem>
+            <TabItem Header="7">
+
+            </TabItem>
+        </TabControl>
+        <Label Content="Condition" HorizontalAlignment="Left" Margin="10,0,0,70" VerticalAlignment="Bottom"/>
+        <ListBox x:Name="gossipMenuItems" Grid.Column="2" Height="350" Margin="0,10,10,240">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock>
+                        <TextBlock.Text>
+                            <Binding Path="GossipTextID" Converter="{StaticResource BroadCastTextConverter}"/>
+                        </TextBlock.Text>
+                    </TextBlock>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <TextBox x:Name="currentGossip" HorizontalAlignment="Right" Height="23" Margin="0,10,0,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="66" IsEnabled="False"/>
+        <Button x:Name="gossipNew" Content="NEW" Margin="10,0,0,100" VerticalAlignment="Bottom"/>
+        <Button Content="ADD" Grid.Column="2" Margin="0,0,10,204" VerticalAlignment="Bottom"/>
     </Grid>
 </UserControl>
